<resources>
    <string name="app_name">Mensageiro</string>
    <string name="action_settings">Configurações</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_list">Lista de Contatos</string>
    <string name="new_account">Nova Conta</string>
    <string name="confirm">Confirmar</string>
    <string name="fullname">nome completo</string>
    <string name="nickname">apelido</string>
    <string name="generic_error">Ops! Houve um erro ao processar sua solicitação.</string>
    <string name="message_edit">Mensagem</string>
    <string name="edit">Editar Conta</string>
    <string name="edit_account">Editar Conta</string>
    <string name="delete">Deletar</string>
    <string name="deleted_contact">Contato removido com sucesso</string>
    <string name="edited_successfully">Conta atualizada com sucesso</string>
    <string name="action_about">Sobre</string>
    <string name="action_contact">Contato</string>
    <string name="action_gallery">Galeria</string>
    <string name="icon">Icone</string>
    <string name="about_text_view">Sobre</string>
    <string name="about_description_text_view">
        *** Mensageiro ***\n
        Denis Oliveira - RA 150246-7\n
        Maiko Trindade - RA 160262-X\n
        \n*** Componentes ***
        \nRetrofit
        \nRealm
    </string>
    <string name="select_image">Selecione uma imagem</string>
</resources>
