<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/margin_top_toolbar">

    <ImageView
        android:id="@+id/new_picture_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/new_picture"/>

    <TextView
        android:id="@+id/full_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_picture_image_view"
        android:layout_marginTop="16dp"
        android:text="@string/fullname"/>

    <EditText
        android:id="@+id/fullname_edt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name_text_view"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/nickname_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname_edt_view"
        android:layout_marginTop="8dp"
        android:text="@string/nickname"/>

    <EditText
        android:id="@+id/nickname_edt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname_text_view"
        android:singleLine="true"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nickname_edt_view"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/confirm"
        android:textColor="@color/material_white_1000"/>

</RelativeLayout>
